# text-reading-with-llm

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  data  data.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: insights-generator.md  phase-executor.md  tdd-generator.md
.claude/commands/: speckit.analyze-session.md  speckit.generate-insights.md  speckit.implement.md  speckit.newissue.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml
.specify/templates/: ph1-output-template.md  red-test-template.md  tasks-template.md
claudedocs/: issue-84-llm-config-profiles.md
conf/: logging.yml
data/72a2534e9e81/: cleaned_text.txt
data/readings/: 72a2534e9e81.json
docs/: leading_punct_pattern.md  verification-log.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_chapter_processor_py.html  z_145eef247bfb46b6_coverage_validator_py.html  z_145eef247bfb46b6_dialogue_converter_py.html  z_145eef247bfb46b6_dialogue_pipeline_py.html  z_145eef247bfb46b6_dialogue_text_splitter_py.html  z_145eef247bfb46b6_dict_manager_py.html  z_145eef247bfb46b6_generate_reading_dict_py.html  z_145eef247bfb46b6_gpu_memory_manager_py.html  z_145eef247bfb46b6_keyword_extractor_py.html  z_145eef247bfb46b6_llm_reading_generator_py.html  z_145eef247bfb46b6_logging_config_py.html  z_145eef247bfb46b6_mecab_reader_py.html  z_145eef247bfb46b6_number_normalizer_py.html  z_145eef247bfb46b6_process_manager_py.html  z_145eef247bfb46b6_prompt_loader_py.html  z_145eef247bfb46b6_punctuation_normalizer_py.html  z_145eef247bfb46b6_reading_dict_py.html  z_145eef247bfb46b6_text_cleaner_cli_py.html  z_145eef247bfb46b6_text_cleaner_py.html  z_145eef247bfb46b6_voicevox_client_py.html  z_145eef247bfb46b6_xml2_parser_py.html  z_145eef247bfb46b6_xml2_pipeline_py.html  z_145eef247bfb46b6_xml_parser_py.html  z_145eef247bfb46b6_xml_pipeline_py.html
scripts/: demo_coverage.py  llm_tester.py  test_dialogue_prompt.py
scripts/prompts/: dialogue_v1.yaml  dialogue_v2.yaml
specs/001-doc-clean-tts-replace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-xml-ttl-loader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-aquestalk-tts/: research.md  spec.md  tasks.md
specs/004-new-xml-format/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: aquestalk_client.py  aquestalk_pipeline.py  chapter_processor.py  coverage_validator.py  dialogue_converter.py  dialogue_pipeline.py  dialogue_text_splitter.py  dict_manager.py  generate_reading_dict.py  gpu_memory_manager.py  keyword_extractor.py  llm_config.py  llm_reading_generator.py  logging_config.py  mecab_reader.py  number_normalizer.py  organize_chapters.py  pipeline.py  process_manager.py  progress.py  prompt_loader.py  punctuation_normalizer.py  reading_dict.py  setup_guide.py  test_tts_normalize.py  text_cleaner.py  text_cleaner_cli.py  toc_extractor.py  tts_generator.py  voicevox_client.py  xml2_parser.py  xml2_pipeline.py  xml_parser.py  xml_pipeline.py
tests/: test_aquestalk_client.py  test_aquestalk_pipeline.py  test_chapter_conversion.py  test_coverage_validator.py  test_dialogue_converter.py  test_dialogue_pipeline.py  test_dict_integration.py  test_dry_run_integration.py  test_file_split.py  test_generate_reading_dict.py  test_gpu_memory_manager.py  test_integration.py  test_isbn_cleaning.py  test_keyword_extractor.py  test_llm_config.py  test_llm_reading_generator.py  test_number_prefix.py  test_parenthetical_cleaning.py  test_prompt_loader.py  test_punctuation_rules.py  test_reference_normalization.py  test_ruff_config.py  test_text_cleaner_cli.py  test_url_cleaning.py  test_voicevox_client.py  test_xml2_parser.py  test_xml2_pipeline.py  test_xml2_pipeline_args.py  test_xml2_pipeline_cleaned_text.py  test_xml2_pipeline_integration.py  test_xml2_pipeline_output.py  test_xml2_pipeline_processing.py  test_xml_parser.py  test_xml_pipeline.py  test_xml_pipeline_args.py  test_xml_pipeline_cleaned_text.py  test_xml_pipeline_integration.py  test_xml_pipeline_output.py  test_xml_pipeline_processing.py
(+273 files in other folders)
