[project]
name = "text-reading-with-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "pyyaml",
    "numpy",
    "requests",
    "fugashi",
    "unidic-lite",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
