[project]
name = "text-reading-with-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "pyyaml",
    "numpy",
    "requests",
    "fugashi",
    "unidic-lite",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-forked",
    "mypy",
    "types-requests",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_any_explicit = false
disallow_any_generics = false
no_implicit_optional = false
disallow_incomplete_defs = false
namespace_packages = false

# voicevox_core has no type stubs, and CI doesn't have it installed
[[tool.mypy.overrides]]
module = ["voicevox_client"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Note: Coverage options are NOT in addopts because they conflict with --forked
# Use `make coverage` or `pytest --cov=src` for local coverage testing

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

