[project]
name = "text-reading-with-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "pyyaml",
    "numpy",
    "requests",
    "fugashi",
    "unidic-lite",
    "scipy",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-forked",
    "mypy",
    "types-requests",
    "types-PyYAML",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# 意図的な遅延import（重いモジュール、オプショナル依存）
"src/voicevox_client.py" = ["PLC0415"]  # voicevox_core (optional, heavy)
"src/logging_config.py" = ["PLC0415"]   # yaml, rich (fallback paths)
"src/chapter_processor.py" = ["PLC0415"]  # scipy (conditional resampling)
"src/xml_pipeline.py" = ["PLC0415"]     # gpu_memory_manager (conditional)
"src/dict_manager.py" = ["PLC0415"]     # circular import avoidance
"src/process_manager.py" = ["PLC0415"]  # time (minor, inside conditional)
"src/dialogue_pipeline.py" = ["PLC0415"]  # voicevox_core (optional, heavy)
"tests/**" = ["PLC0415"]                # テスト内import（pytest fixtures等）

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_any_explicit = false
disallow_any_generics = false
no_implicit_optional = false
disallow_incomplete_defs = false
namespace_packages = false

# voicevox_core has no type stubs, and CI doesn't have it installed
[[tool.mypy.overrides]]
module = ["voicevox_client"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Note: Coverage options are NOT in addopts because they conflict with --forked
# Use `make coverage` or `pytest --cov=src` for local coverage testing

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

